<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grpFeatures"
        android:checkableBehavior="single">
    <item
        android:id="@+id/main_item"
        android:title="@string/features">

        <menu>

            <item
                android:id="@+id/recommendation"
                android:icon="@drawable/ic_recommendation"
                android:title="@string/recommendations"
                android:checkable="true"/>
            <item
                android:id="@+id/support_chat"
                android:icon="@drawable/ic_chat"
                android:title="@string/support_chat"
                android:checkable="true"/>
            <item
                android:id="@+id/document"
                android:icon="@drawable/ic_document"
                android:title="@string/documents"
                android:checkable="true"/>

            <item
                android:id="@+id/voucher"
                android:icon="@drawable/ic_voucher"
                android:title="@string/vouchers"
                android:checkable="true"/>

            <item
                android:id="@+id/account"
                android:icon="@drawable/ic_account"
                android:title="@string/account"
                android:checkable="true"/>

        </menu>

    </item>

    </group>


    <group
        android:id="@+id/grpExtras"
        android:checkableBehavior="single">
        <item
            android:id="@+id/extra_item"
            android:title="@string/extras">

            <menu>

                <item
                    android:id="@+id/rate_us"
                    android:icon="@drawable/ic_rate_us"
                    android:title="@string/rate_us"
                    android:checkable="true"/>
                <item
                    android:id="@+id/privacy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/privacy_policy"
                    android:checkable="true"/>

            </menu>

        </item>

    </group>






</menu>